--- a/Day01-15/08.面向对象编程基础.md
+++ b/Day01-15/08.面向对象编程基础.md
@@ -214,8 +214,8 @@ class Point(object):
         :param dx: 横坐标的增量
         "param dy: 纵坐标的增量
         """
-        self.x += dx
-        self.y += dy
+        self.x = dx
+        self.y = dy
 
     def distance_to(self, other):
         """计算与另一个点的距离
